syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-collection/api/proto/v1";

import "v1/get-collection.proto";

message GetCollectionsMapRequest {
  string userId = 1;
  repeated string collectionIds = 2;
}

message GetCollectionsMapResponse {
  map<string, Collection> collections = 1;
}
