syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-collection/api/proto/v1";

message UpdateCollectionRequest {
  string userId = 1;
  string collectionId = 2;
  string name = 3;
  optional string emoji = 4;
}

message UpdateCollectionResponse {
  string message = 1;
}
